--- a/E_Kotlin/Projects/AndroidStudio/QuizGame/app/src/main/AndroidManifest.xml
+++ b/E_Kotlin/Projects/AndroidStudio/QuizGame/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FirstProject">
+        android:theme="@style/Theme.QuizGame"
+        tools:targetApi="31">
         <activity
-            android:name=".MainActivity2"
+            android:name=".GameActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
