--- a/E_Kotlin/Projects/AndroidStudio/QuizGame/app/src/main/AndroidManifest.xml
+++ b/E_Kotlin/Projects/AndroidStudio/QuizGame/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         tools:targetApi="31">
         <activity
             android:name=".GameActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:label="@string/title_activity_game" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
