--- a/E_Kotlin/Projects/PassWordGame/app/src/main/AndroidManifest.xml
+++ b/E_Kotlin/Projects/PassWordGame/app/src/main/AndroidManifest.xml
@@ -6,20 +6,19 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.Pass_Word"
-        tools:targetApi="33">
+        tools:targetApi="33"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round">
         <activity
             android:name=".ui.activities.HelpActivity"
             android:exported="false" />
         <activity
             android:name=".ui.activities.SplashActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Design.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
