--- a/D_Java/Projects/SpringBoot-Maven/FirstSpring/pom.xml
+++ b/D_Java/Projects/SpringBoot-Maven/FirstSpring/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.7</version>
+		<version>2.7.18</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.sebss</groupId>
@@ -42,7 +42,7 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<!--MySql dependencies:-->
-		<dependency>
+		<!--~~(No version provided)~~>--><dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
