--- a/D_Java/Projects/Maven/algorithims-java/.vscode/settings.json
+++ b/D_Java/Projects/Maven/algorithims-java/.vscode/settings.json
@@ -26,5 +26,6 @@
         "Simular",
         "supercomputadores",
         "tarea"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
